@@ -1,5 +1,6 @@
 qtile 0.x.x, released xxxx-xx-xx:
     * features
+        - allow window state to be hidden on WindowName widget
         - improved serialization of layouts across restarts
         - cmd_togroup can move to current group when None sent
     * bugfixes
